# models

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cards/: le_net.yml
data/: mnist.py
models/: le_net.py
weights/: le_net.ckpt
